tests/security/taintThroughTemplatedProperty/output.txt
ERROR: TaintedData - input.hack:24:10 - Data from a URL query string found its way to an HTML tag using path